@@ -1,5 +1,7 @@
 2010-06-06 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* include/dlvhex/MLPSolver.hpp: Implementing instantiation splitting: using Top data structure.
+
 	* include/dlvhex/MLPSolver.hpp: Implement collecting the largest bottom.
 
 2010-05-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
